[package]
name = "chip8"
version = "0.1.0"
edition = "2018"
authors = ["CanCodes <c4navar.publicmail@gmail.com>"]
license = "MIT"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
minifb = "0.19.3"
